2014-11-09  Eli Zaretskii  <eliz@gnu.org>

	* w32heap.c (allocate_heap): Set the lower limit of heap at 8MB.
	(Bug#18995)

2014-11-09  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.h (EmacsScroller): judge returns bool.

	* nsterm.m (ns_set_vertical_scroll_bar): Release bar.
	(ns_judge_scroll_bars): Only set removed if judge returns true.
	(judge): Returns bool == condemned.  Remove self from window.
	(setPosition:portion:whole:): Remove raise SIGIO (Bug#18757).

2014-11-08  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (init): Replace OSX 10.9 check with IMPL_COCOA.
	(run): Ditto.  Only use non-system event loop if OSX version is
	exactly 10.9 (Bug#18993).
	(ns_set_vertical_scroll_bar): Don't call bar setPosition: unless
	needed (Bug#18757).

2014-11-07  Michael Albinus  <michael.albinus@gmx.de>

	* callproc.c (encode_current_directory): Support handling of file
	names prepended by "/:".  (Bug#18891)

2014-11-06  Alan Mackenzie  <acm@muc.de>

	* syntax.c (back_comment): Fix off-by-one error (bug#18022).

2014-11-06  Dima Kogan  <dima@secretsauce.net>

	* xgselect.c (xg_select): Use g_main_context_acquire (bug#18861).

2014-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* dired.c (Ffile_attributes): Return Qnil, if Fexpand_file_name
	raises an error.  (Bug#18891)

2014-11-03  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (Fdump_glyph_matrix, Fdump_frame_glyph_matrix): Doc fix.
	(Fdump_frame_glyph_matrix): Don't segfault if invoked on a GUI
	frame; instead, print an error message.

2014-11-03  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfns.m (ns_set_doc_edited): Check for FRAME_NS (Bug#18925).

2014-10-31  Jan Djärv  <jan.h.d@swipnet.se>

	* macfont.m (macfont_glyph_extents): Turn off syntetic bold
	if force_integral_p (i.e. no antialias).
	(macfont_draw): Check ns_antialias_text, also turn off syntetic
	bold if no antialias (Bug#18876).

	* emacs.c (main): Don't chdir to $HOME on Cocoa if --chdir
	was given (Bug#18846).

2014-10-30  Jan Djärv  <jan.h.d@swipnet.se>
